@@ -29,8 +29,32 @@ dependencies {
 	compileOnly 'org.projectlombok:lombok:1.18.22'
 	annotationProcessor 'org.projectlombok:lombok:1.18.22'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	testImplementation 'org.springframework.security:spring-security-test'
 }
 
+
+////test {
+////	useJUnit()
+////
+////	maxHeapSize = '1G'
+////}
+//
+//tasks.test {
+//	useJUnitPlatform()
+//	jvmArgs "--enable-preview"
+//	filter {
+////		//include specific method in any of the tests
+////		includeTestsMatching("*UiCheck")
+////
+////		//include all tests from package
+////		includeTestsMatching("org.gradle.internal.*")
+//
+////		include all integration tests
+//		includeTestsMatching("ru.skillbox.socnetwork.PostControllerTest")
+//	}
+//}
+////
 tasks.named('test') {
+
 	useJUnitPlatform()
 }
